test/badas1.l1.out
error: incompletely defined address space
	#0                    mkas	(builtin function)
	#1                   entry	(badas1.l1:1)
